<resources>
    <string name="app_name">OSUS</string>
    <string name="facebook_app_id">615716218628762</string>
    <string name="fb_login_protocol_scheme">fb[615716218628762]</string>


    <!-- First SCreens -->
    <string name="first_screens_title">Herzlich Willkommen</string>
    <string name="first_screen_button_close">Schließen</string>

    <string name="placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Etiam interdum mauris convallis, dignissim lectus eu, efficitur eros.
        Morbi non orci sed lorem aliquam cursus. Phasellus mattis, dui eget malesuada vestibulum, velit augue fringilla lacus,
        nec semper massa tellus eu ante. Vestibulum semper, quam et efficitur rutrum, tellus orci ultrices orci,
        eu suscipit felis est sagittis tellus. Sed malesuada ultricies mattis.
        Fusce nec metus ex. Pellentesque id leo pulvinar, faucibus metus et, iaculis nibh
    </string>

    <string name="placeholder2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Etiam interdum mauris convallis, dignissim lectus eu, efficitur eros.
        Morbi non orci sed lorem aliquam cursus.
    </string>


    <string name="home_button_pass">Pass</string>
    <string name="home_button_feedback">Feedback</string>
    <string name="home_title">Home</string>
    <string name="firstscreen_permissions_title">Permissions</string>
    <string name="firstscreen_willkommen_title">Willkommen</string>
    <string name="permission_denied_dialog_title">Permission Denied</string>
    <string name="permission_denied_dialog_body">For optimum experience, this permission is important</string>
    <string name="text_yes">Ja</string>
    <string name="text_no">Nein</string>
    <string name="textbox_hint_email">E-mail Addresse</string>
    <string name="dialog_facebook_title">Facebook Verbinden</string>
    <string name="dialog_facebook_message">Sie haben Ihr Facebook erfolgreich verbunden</string>
    <string name="dalog_facebook_error_cancel_message">Facebook-Verbindung war nicht erfolgreich, Sie werden nicht in der Lage sein, personalisierte Empfehlungen zu erhalten</string>
    <string name="fragment_feedback_content_title">Was haben Sie auf dem Herzen?</string>
    <string name="error_audio_dialog_title">Achtung</string>
    <string name="error_audio_dialog_body">Without Audio Permission, you cannot submit feedback</string>


    <string name="first_fragment_welcome">

        Herzlich Willkommen bei Ohne Schlüssel und Schloss? Chancen und Risiken von Big Data.
Prachtvolle Schlösser und charmante Schlüssel aus vergangenen Jahrhunderten geben Anlass, die mit diesen Artefakten verbundene Kulturtechnik aus heutiger Sicht zu befragen. Im Wandel von analog zu digital ist die heutige Haltung zu Verschluss und Verschlüsselung alles andere als eindeutig…

Dabei stellen wir auch die Frage, in welchem Zusammenhang Geheimnisse, Privatsphäre, Codierungen, und Datenerfassung heute stehen? Um hierfür ein besseres Verständnis zu entwickeln, bietet die Ausstellung einen Blick auf historische Verschlussobjekte und stellt diesen neue IT-Technologie gegenüber. Daten seien das neue Gold heißt es immer wieder: Gibt also aktuell einen Wertewandel zu verzeichnen? Und gehen wir mit unseren Daten nicht viel zu oft und viel zu offen um? Was ist die Folge? Interaktive Stationen werden Ihnen ein Gefühl für diese ansonsten so abstrakte Thematik vermitteln. Bitte setzten Sie dafür auch Ihr Smartphone ein und verwenden unsere App. Sie erhalten so viele nützliche Informationen und Zugang zu sonst verschlossenen Türen. Und schließlich werden Sie um eine Erfahrung reicher sein, was ein verantwortungsbewusster Umgang mit (eigenen) Daten bedeutet.

    </string>



    <string name="first_fragment_android_permission">
    Einige Bestandteile der Ausstellung können Sie nur betrachten, wenn Sie der APP die Erfassung Ihres momentanen Standortes gestatten. Selbstverständlich werden wir diese Daten ausschließlich für die Zwecke der Ausstellung nutzen und nicht an Dritte weitergeben.
    </string>



    <string name="first_fragment_android_permission_2">
        Sind Sie damit einverstanden, dass diese App auf Ihre Standortinforma­tionen zugreift?
    </string>



    <string name="first_fragment_science_permission">

    Ihr Besuch hat auch im Anschluss an die Ausstellung Konsequenzen und Folgen. Gemeinsam mit dem Deutschen Forschungszentrum für Künstliche Intelligenz werten wir alle gesammelten Daten aus und veröffentlichen einen wissenschaftlichen Bericht, dem Sie entnehmen können, welche Informationen unsere Forschungspartner aus Ihren Daten gezogen haben. Wenn Sie möchten, senden wir Ihnen diesen Bericht auch per Email zu – tragen Sie hierfür Ihre Email Adresse in das folgende Feld ein.
    </string>

    <string name="first_fragment_science_permission_2">Dürfen wir Ihre Daten im Rahmen der wissenschaftlichen Analyse verwenden?</string>


    <string name="first_fragment_facebook_login">

        Nutzen Sie Facebook? Melden Sie sich einmalig mit Ihrem Facebook Konto bei uns an. Dafür erhalten Sie 1 EUR Rabatt auf den Eintrittspreis. Außerdem erhalten Sie so einen weitreichenden Einblick, welche Bedeutung die Daten haben, die man meist privat bei  Facebook einstellt. Wir nutzen diese Daten ausschließlich im Rahmen der Ausstellung. Selbstverständlich sendet diese App selbst keinerlei Daten zu Facebook.

        </string>


    <string name="first_fragment_questionnaire">Wir würden Sie gern etwas näher kennen lernen, um Ihnen einige Exponate in der Ausstellung besonders ans Herz legen zu können. Beantwort­en Sie hierfür doch bitte die folgenden Fragen – im Anschluss können Sie sofort mit der Nutzung der Ausstellungs App beginnen.</string>
    <string name="first_fragment_questionnaire_submit">Abgeben</string>
    <string name="fragment_feedback_text">Dies ist der Pass Bildschirm. Wofür und was auch immer für ein Text folgt. Hier jedenfalls nur Blindtext, der noch getextet wird. Frage, ob man den Homebutton türkis lässt oder auch gelb. Hier nur als Blindtext</string>
    <string name="questionnair_question1">Verraten Sie uns bitte Ihren Namen</string>
    <string name="questionnaire_q2">Wie alt sind Sie?</string>
    <string name="questionnaire_q3">Wie sind Sie auf die Ausstellung aufmerksam geworden?</string>
    <string name="questionnaire_q4">Welches der folgenden vier Bilder gefällt Ihnen spontan am besten?</string>


    <string name="fragment_welcome_text">
        Herzlich Willkommen bei Ohne Schlüssel und Schloss? Chancen und Risiken von Big Data.
Prachtvolle Schlösser und charmante Schlüssel aus vergangenen Jahrhunderten geben Anlass, die mit diesen Artefakten verbundene Kulturtechnik aus heutiger Sicht zu befragen. Im Wandel von analog zu digital ist die heutige Haltung zu Verschluss und Verschlüsselung alles andere als eindeutig…
\n\n
Dabei stellen wir auch die Frage, in welchem Zusammenhang Geheimnisse, Privatsphäre, Codierungen, und Datenerfassung
        heute stehen? Um hierfür ein besseres Verständnis zu entwickeln, bietet die Ausstellung einen Blick auf historische Verschlussobjekte und stellt diesen neue IT-Technologie gegenüber. Daten seien das neue Gold heißt es immer wieder: Gibt also aktuell einen Wertewandel zu verzeichnen? Und gehen wir mit unseren Daten nicht viel zu oft und viel zu offen um? Was ist die Folge? Interaktive Stationen werden Ihnen ein Gefühl für diese ansonsten so abstrakte Thematik vermitteln. Bitte setzten Sie dafür auch Ihr Smartphone ein und verwenden unsere App. Sie erhalten so viele nützliche Informationen und Zugang zu sonst verschlossenen Türen. Und schließlich werden Sie um
        eine Erfahrung reicher sein, was ein verantwortungsbewusster Umgang mit (eigenen) Daten bedeutet.</string>




    <string name="fragment_questionnaire_text">Wir würden Sie gern etwas näher kennenlernen, um Ihnen einige Exponate in der Ausstellung besonders ans Herz legen zu können. Beantworten Sie hierfür bitte die folgenden Fragen – im Anschluss können Sie sofort mit der Nutzung der Ausstellungs-App beginnen.</string>


</resources>
