<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    >

    <TextView style="@style/titleTextStyle"
        android:text="@string/firstscreen_permissions_title"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/beacon"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/aboutBody"
            style="@style/contentBodyText"
            android:text="@string/placeholder"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <Button
            android:id="@+id/grantBeaconPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_yes"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/denyBeaconPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>




</RelativeLayout>
