<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    >

    <TextView
        android:id="@+id/titleText"
        style="@style/titleTextStyle"
        android:text="Genehmigung (Big Data)"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/titleText"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/sciencedata"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/aboutBody"
            style="@style/contentBodyText"
            android:height="100dp"
            android:text="@string/placeholder"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/emailBox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittextborder"
            android:hint="@string/textbox_hint_email"
            android:inputType="textEmailAddress"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <Button
                android:id="@+id/grantBeaconPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_yes"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/denyBeaconPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_no"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

    </LinearLayout>




</RelativeLayout>
